==> analogdevicesinc/CANopenADI/MAX32xxx/CO_driver_max32xxx.c <==
#include <stdio.h>
#include "mxc_device.h"
#include "mxc_lock.h"
#include "can.h"
#include "301/CO_driver.h"
#define PRINT(...) printf(__VA_ARGS__)
#define PRINT(...)
#define MAP_B   1
#define CAN_STD_ID_MASK 0x7FFU
#define CAN_RTR_FLAG    0x8000
#define CAN_ERR_THRESH_WARNING    96U
#define CAN_ERR_THRESH_PASSIVE    128U
#define CAN_ERR_THRESH_BUSOFF     256U

void CO_CANsetConfigurationMode(void *CANptr){
    /* Put CAN module in configuration mode */
    int err = MXC_CAN_SetMode(MXC_CAN_GET_IDX(CANptr),
            MXC_CAN_MODE_INITIALIZATION);
    if (err != E_NO_ERROR) {
        PRINT("%s: Error: MXC_CAN_SetMode() failed: %d\n", __func__, err);
    }
}

void CO_CANsetNormalMode(CO_CANmodule_t *CANmodule){
    /* Put CAN module in normal mode */
    if (MXC_CAN_SetMode(MXC_CAN_GET_IDX(CANmodule->CANptr),
            MXC_CAN_MODE_NORMAL) != E_NO_ERROR) {
        PRINT("%s: Error: MXC_CAN_SetMode() failed\n", __func__);
    } else {
        CANmodule->CANnormal = true;
    }
}

CO_ReturnError_t CO_CANmodule_init(
        CO_CANmodule_t         *CANmodule,
        void                   *CANptr,
        CO_CANrx_t              rxArray[],
        uint16_t                rxSize,
        CO_CANtx_t              txArray[],
        uint16_t                txSize,
        uint16_t                CANbitRate)
{
    uint16_t i;
    uint32_t bitrate = CANbitRate * 1000;
    const CO_CANbitRateData_t *CANbitRateData = NULL;

    /* verify arguments */
    if(CANmodule==NULL || rxArray==NULL || txArray==NULL){
        return CO_ERROR_ILLEGAL_ARGUMENT;
    }

    /* Configure object variables */
    CANmodule->CANptr = CANptr;
    CANmodule->rxArray = rxArray;
    CANmodule->rxSize = rxSize;
    CANmodule->txArray = txArray;
    CANmodule->txSize = txSize;
    CANmodule->CANerrorStatus = 0;
    CANmodule->CANnormal = false;
    /* Number of hardware filters are usually less than rxSize. */
    CANmodule->useCANrxFilters = false;
    CANmodule->bufferInhibitFlag = false;
    CANmodule->firstCANtxMessage = true;
    CANmodule->CANtxCount = 0U;
    CANmodule->errOld = 0U;
    CANmodule->txLock = 0;
    CANmodule->emcyLock = 0;
    CANmodule->odLock = 0;

    CANthis = CANmodule;

    for(i=0U; i<rxSize; i++){
        rxArray[i].ident = 0U;
        rxArray[i].mask = 0xFFFFU;
        rxArray[i].object = NULL;
        rxArray[i].CANrx_callback = NULL;
    }
    for(i=0U; i<txSize; i++){
        txArray[i].bufferFull = false;
    }


    /* Configure CAN module registers */
    if (MXC_CAN_PowerControl(MXC_CAN_GET_IDX(CANmodule->CANptr),
        MXC_CAN_PWR_CTRL_FULL) != E_NO_ERROR) {
        PRINT("%s: Error: MXC_CAN_PowerControl() failed\n", __func__);
        return CO_ERROR_INVALID_STATE;
    }
#if TARGET_NUM == 32662
    if (MXC_CAN_Init(MXC_CAN_GET_IDX(CANmodule->CANptr), MXC_CAN_OBJ_CFG_TXRX,
            canUnitEvent_cb, canObjEvent_cb, MAP_B) != E_NO_ERROR) {
        return CO_ERROR_INVALID_STATE;
    }
#elif TARGET_NUM == 32690
    if (MXC_CAN_Init(MXC_CAN_GET_IDX(CANmodule->CANptr),
            MXC_CAN_OBJ_CFG_TXRX, canUnitEvent_cb,
            canObjEvent_cb) != E_NO_ERROR) {
        return CO_ERROR_INVALID_STATE;
    }
#endif

    /* Configure CAN timing */
    for (i = 0; i < sizeof(CO_CANbitRateData) / sizeof(CO_CANbitRateData[0]);
            i++) {
        if (CO_CANbitRateData[i].bitrate == CANbitRate) {
            CANbitRateData = &CO_CANbitRateData[i];
            break;
        }
    }

    if (CANbitRateData == NULL) {
        return CO_ERROR_ILLEGAL_BAUDRATE;
    }

    if (MXC_CAN_SetBitRate(MXC_CAN_GET_IDX(CANmodule->CANptr),
            MXC_CAN_BITRATE_SEL_NOMINAL, bitrate,
            MXC_CAN_BIT_SEGMENTS(CANbitRateData->nseg1, CANbitRateData
                    ->nseg2, CANbitRateData->nsjw)) != E_NO_ERROR) {
        PRINT("%s: Error: MXC_CAN_SetBitrate() failed\n", __func__);
        return CO_ERROR_ILLEGAL_BAUDRATE;
    }

    /* Configure CAN module hardware filters */
    if(CANmodule->useCANrxFilters){
        /* CAN module filters are used, they will be configured with */
        /* CO_CANrxBufferInit() functions, called by separate CANopen */
        /* init functions. */
        /* Configure all masks so, that received message must match filter */
    }
    else{
        /* CAN module filters are not used, all messages with standard 11-bit */
        /* identifier will be received */
        /* Configure mask 0 so, that all messages with standard identifier are accepted */
    	MXC_CAN_ObjectSetFilter(MXC_CAN_GET_IDX(CANmodule->CANptr),
		MXC_CAN_FILT_CFG_MASK_DEL | MXC_CAN_FILT_CFG_SINGLE_STD_ID,
		CAN_STD_ID_MASK, 0);
    	MXC_CAN_ObjectSetFilter(MXC_CAN_GET_IDX(CANmodule->CANptr),
                MXC_CAN_FILT_CFG_MASK_ADD | MXC_CAN_FILT_CFG_SINGLE_STD_ID,
                CAN_STD_ID_MASK, 0);
    }

    /* Store message read request */
    rxReq.data = rxData;
    rxReq.data_sz = sizeof(rxData);
    rxReq.msg_info = &rxInfo;
    if (MXC_CAN_MessageReadAsync(MXC_CAN_GET_IDX(CANmodule->CANptr), &rxReq)
            < E_NO_ERROR) {
        PRINT("%s: Error: MXC_CAN_MessageReadAsync() failed\n", __func__);
        return CO_ERROR_ILLEGAL_ARGUMENT;
    }

    return CO_ERROR_NO;
}

void CO_CANmodule_disable(CO_CANmodule_t *CANmodule) {
    if (CANmodule != NULL) {
        /* turn off the module */
        if (MXC_CAN_PowerControl(MXC_CAN_GET_IDX(CANmodule->CANptr),
                MXC_CAN_PWR_CTRL_OFF) != E_NO_ERROR) {
            PRINT("%s: Error: MXC_CAN_PowerControl() failed\n", __func__);
        }
        if (MXC_CAN_UnInit(MXC_CAN_GET_IDX(CANmodule->CANptr)) != E_NO_ERROR) {
            PRINT("%s: Error: MXC_CAN_UnInit() failed\n", __func__);
        }
    }
}

CO_ReturnError_t CO_CANrxBufferInit(
        CO_CANmodule_t         *CANmodule,
        uint16_t                index,
        uint16_t                ident,
        uint16_t                mask,
        bool_t                  rtr,
        void                   *object,
        void                  (*CANrx_callback)(void *object, void *message))
{
    CO_ReturnError_t ret = CO_ERROR_NO;

    if((CANmodule!=NULL) && (object!=NULL) && (CANrx_callback!=NULL) && (index < CANmodule->rxSize)){
        /* buffer, which will be configured */
        CO_CANrx_t *buffer = &CANmodule->rxArray[index];

        /* Configure object variables */
        buffer->object = object;
        buffer->CANrx_callback = CANrx_callback;

        /* CAN identifier and CAN mask, bit aligned with CAN module. Different on different microcontrollers. */
        buffer->ident = MXC_CAN_STANDARD_ID(ident);
        if(rtr){
            buffer->ident |= MXC_CAN_BUF_CFG_RTR(1);
        }
        buffer->mask = MXC_CAN_STANDARD_ID(mask) | MXC_CAN_BUF_CFG_RTR(1);

        /* Set CAN hardware module filter and mask. */
        if(CANmodule->useCANrxFilters){
            __NOP();
        }
    }
    else{
        ret = CO_ERROR_ILLEGAL_ARGUMENT;
    }

    return ret;
}

CO_CANtx_t *CO_CANtxBufferInit(
        CO_CANmodule_t         *CANmodule,
        uint16_t                index,
        uint16_t                ident,
        bool_t                  rtr,
        uint8_t                 noOfBytes,
        bool_t                  syncFlag)
{
    CO_CANtx_t *buffer = NULL;

    if((CANmodule != NULL) && (index < CANmodule->txSize)){
        /* get specific buffer */
        buffer = &CANmodule->txArray[index];

        /* CAN identifier and rtr. */
        buffer->ident = (MXC_CAN_STANDARD_ID(ident))
                | ((uint32_t)(rtr ? CAN_RTR_FLAG : 0U));

        buffer->bufferFull = false;
        buffer->syncFlag = syncFlag;
        buffer->DLC = noOfBytes;
    }

    return buffer;
}

void CO_CANmodule_process(CO_CANmodule_t *CANmodule) {
    uint32_t err;
    uint16_t rxErrors=0, txErrors=0, overflow=0;

    /* We may as well use event callbacks to obtain error status */
    overflow = (MXC_CAN0->stat & MXC_F_CAN_STAT_DOR) ? 1 : 0;
    txErrors = MXC_CAN0->txerr;
    rxErrors = MXC_CAN0->rxerr;
    err = ((uint32_t)txErrors << 16) | ((uint32_t)rxErrors << 8) | overflow;

    if (CANmodule->errOld != err) {
        uint16_t status = CANmodule->CANerrorStatus;

        CANmodule->errOld = err;

        if (txErrors >= CAN_ERR_THRESH_BUSOFF) {
            /* bus off */
            status |= CO_CAN_ERRTX_BUS_OFF;
        }
        else {
            /* recalculate CANerrorStatus, first clear some flags */
            status &= 0xFFFF ^ (CO_CAN_ERRTX_BUS_OFF |
                                CO_CAN_ERRRX_WARNING | CO_CAN_ERRRX_PASSIVE |
                                CO_CAN_ERRTX_WARNING | CO_CAN_ERRTX_PASSIVE);

            /* rx bus warning or passive */
            if (rxErrors >= CAN_ERR_THRESH_PASSIVE) {
                status |= CO_CAN_ERRRX_WARNING | CO_CAN_ERRRX_PASSIVE;
            } else if (rxErrors >= CAN_ERR_THRESH_WARNING) {
                status |= CO_CAN_ERRRX_WARNING;
            }

            /* tx bus warning or passive */
            if (txErrors >= CAN_ERR_THRESH_PASSIVE) {
                status |= CO_CAN_ERRTX_WARNING | CO_CAN_ERRTX_PASSIVE;
            } else if (rxErrors >= CAN_ERR_THRESH_WARNING) {
                status |= CO_CAN_ERRTX_WARNING;
            }

            /* if not tx passive clear also overflow */
            if ((status & CO_CAN_ERRTX_PASSIVE) == 0) {
                status &= 0xFFFF ^ CO_CAN_ERRTX_OVERFLOW;
            }
        }

        if (overflow != 0) {
            /* CAN RX bus overflow */
            status |= CO_CAN_ERRRX_OVERFLOW;
        }

        CANmodule->CANerrorStatus = status;
    }
}
